--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,14 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 }
 
 android {
     compileSdk 30
     buildToolsVersion "30.0.3"
     defaultConfig {
-        applicationId "com.example.android4_lesson1"
+        applicationId "com.example.client_github"
         minSdk 21
         targetSdk 30
         versionCode 1
@@ -36,16 +37,21 @@ android {
 }
 
 dependencies {
+
     implementation "com.github.moxy-community:moxy:2.1.2"
     kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
 
+    implementation 'ru.terrakok.cicerone:cicerone:5.1.1'
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
