--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 30
     buildToolsVersion "30.0.3"
     defaultConfig {
-        applicationId "com.example.client_github"
+        applicationId "com.example.pngconverter"
         minSdk 21
         targetSdk 30
         versionCode 1
@@ -32,7 +32,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding = true
+        viewBinding true
     }
 }
 
@@ -45,10 +45,6 @@ dependencies {
     kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
-
-    implementation 'ru.terrakok.cicerone:cicerone:5.1.1'
-
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
